# pcloud-console-client

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  build.sh  conanfile.txt  debian.dockerfile  requirements.txt
docs/: CMakeLists.txt  Doxyfile.in  GettingStarted.md  Install.md  Packaging.md  Usage.md  custom.js  doxygen.css  footer.html  header.html  mainpage.hpp
extras/: CMakeLists.txt  README.md
extras/launchd/: .gitignore  CMakeLists.txt  com.pcloud.pcloudcc@3.plist.in
extras/systemd/: .gitignore  CMakeLists.txt  pcloudcc@.service.in
pCloudCC/: CMakeLists.txt  main.cpp
pCloudCC/lib/pclsync/: Makefile  pcompat.h
src/: CMakeLists.txt  config.h.in  control_tools.cpp  control_tools.hpp  main.cpp  pclcli.cpp  pclcli.hpp  pclsync_lib.cpp
src/cli/: CMakeLists.txt  app.cpp  app.hpp  bridge.cpp  bridge.hpp  ct.cpp  ct.hpp  formatter.cpp  formatter.hpp
src/lib/mbedtls/include/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters
src/lib/mbedtls/programs/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  wince_main.c
src/lib/mbedtls/programs/aes/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  aescrypt2.vcxproj.filters  crypt_and_hash.vcxproj.filters
src/lib/mbedtls/programs/hash/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  generic_sum.vcxproj.filters  hello.vcxproj.filters  md5sum.vcxproj.filters  sha1sum.vcxproj.filters  sha2sum.vcxproj.filters
src/lib/mbedtls/programs/pkey/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  dh_client.vcxproj.filters  dh_genprime.vcxproj.filters  dh_server.vcxproj.filters  ecdsa.vcxproj.filters  gen_key.vcxproj.filters  key_app.vcxproj.filters  key_app_writer.vcxproj.filters  mpi_demo.vcxproj.filters  pk_decrypt.vcxproj.filters  pk_encrypt.vcxproj.filters  pk_sign.vcxproj.filters  pk_verify.vcxproj.filters  rsa_decrypt.vcxproj.filters  rsa_encrypt.vcxproj.filters  rsa_genkey.vcxproj.filters  rsa_sign.vcxproj.filters  rsa_sign_pss.vcxproj.filters  rsa_verify.vcxproj.filters  rsa_verify_pss.vcxproj.filters
src/lib/mbedtls/programs/random/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  gen_entropy.vcxproj.filters  gen_random_ctr_drbg.vcxproj.filters  gen_random_havege.vcxproj.filters
src/lib/mbedtls/programs/ssl/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  mini_client.vcxproj.filters  ssl_client1.vcxproj.filters  ssl_client2.vcxproj.filters  ssl_fork_server.vcxproj.filters  ssl_mail_client.vcxproj.filters  ssl_pthread_server.vcxproj.filters  ssl_server.vcxproj.filters  ssl_server2.vcxproj.filters
src/lib/mbedtls/programs/test/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  benchmark.vcxproj.filters  selftest.vcxproj.filters  ssl_cert_test.vcxproj.filters  ssl_test.vcxproj.filters
src/lib/mbedtls/programs/util/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  pem2der.vcxproj.filters  strerror.vcxproj.filters
src/lib/mbedtls/programs/x509/: INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  cert_app.vcxproj.filters  cert_req.vcxproj.filters  cert_write.vcxproj.filters  crl_app.vcxproj.filters  req_app.vcxproj.filters
src/lib/mbedtls/vc-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MBEDTLS.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apidoc.vcxproj  apidoc.vcxproj.filters  covtest.vcxproj  covtest.vcxproj.filters  lcov.vcxproj  lcov.vcxproj.filters  memcheck.vcxproj  memcheck.vcxproj.filters  test-ref-config.vcxproj  test-ref-config.vcxproj.filters
src/lib/mbedtls/vc-build/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
src/lib/mbedtls/vc-build/programs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
src/lib/mbedtls/vc-build/programs/aes/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  aescrypt2.vcxproj  aescrypt2.vcxproj.filters  crypt_and_hash.vcxproj  crypt_and_hash.vcxproj.filters
src/lib/mbedtls/vc-build/programs/hash/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  (+11 more)
src/lib/mbedtls/visualc/VS6/: mbedtls.dsw
src/lib/pclsync/: CMakeLists.txt  Makefile  pbusinessaccount.c  pcompat.c  pdevice_monitor.c  pfs.c  pfsxattr.c  plibs.h  plocalnotify.c  pnetlibs.c  ppathstatus.c  pssl-mbedtls.c  pssl-mbedtls.h  pssl-openssl.c  psynclib.c
src/lib/pclsync/lib/poverlay_linux/: overlay_client.c  overlay_client.h
src/lib/poverlay_linux/: debug.h  overlay_client.c  overlay_client.h
src/logger/: .gitignore  CMakeLists.txt  logger.c  logger.h  logger.h.in
src/overlay_client/: CMakeLists.txt  debug.c  debug.h  overlay_client.c  overlay_client.h
src/pclsync/: CMakeLists.txt  papi.c  papi.h  pasyncnet.c  pcache.c  pcallbacks.c  pcallbacks.h  pcloudcrypto.h  pcompat.c  pcompat.h  pcompression.c  pcrc32c.c  pcrc32c.h  pdatabase.h  pdevice_monitor.c  pdevice_monitor.h  pdiff.c  pdiff.h  pexternalstatus.c  pfileops.h  pfolder.h  pfs.c  pfs.h  pfscrypto.c  pfscrypto.h  pfsstatic.c  pfstasks.c  pfstasks.h  pfsupload.c  pfsxattr.c  pfsxattr.h  plibs.c  plibs.h  plist.c  plist.h  plocalnotify.c  plocalscan.c  plocalscan.h  pmemlock.c  pnetlibs.c  (+26 more)
src/psync/: CMakeLists.txt  config.h.in  papi.c  papi.h  pasyncnet.c  pasyncnet.h  pbusinessaccount.c  pbusinessaccount.h  pcache.c  pcache.h  pcallbacks.c  pcallbacks.h  pcloudcrypto.c  pcloudcrypto.h  pcompat.c  pcompression.c  pcompression.h  pcontacts.c  pcontacts.h  pcrc32c.c  pcrc32c.h  pcrypto.c  pdatabase.h  pdevice_monitor.c  pdevice_monitor.h  pdeviceid.c  pdeviceid.h  pdevicemap.c  pdevicemap.h  pdiff.c  pdiff.h  pdownload.c  pdownload.h  pexternalstatus.c  pfileops.c  pfileops.h  pfolder.c  pfolder.h  pfs.c  pfs.h  (+71 more)
src/tools/: CMakeLists.txt  sockets.c  sockets.h
tests/: CMakeLists.txt  main.cpp
tests/cli/: CMakeLists.txt  app.cpp  formatter.cpp
tests/compat/: CMakeLists.txt
tests/psync/: CMakeLists.txt
tests/psync/compat/: CMakeLists.txt  stringcompat.cpp
(+168 files in other folders)
